fix alignment

--- a/files/stylesheets/music.css
+++ b/files/stylesheets/music.css
@@ -42,7 +42,6 @@ html {
 
 .g1 {
 	grid-area: nav;
-	width: 130px;
 }
 
 .g2 {
